:recycle: POM rollback